1.4.2
    - Moved EC2 and VPC to cloudify_aws package
    - Added an Instance-Subnet connected_to relationship
1.4.3
    - Add Subnet create retry operation
    - Improvements to ELB creation
    - Fix bug that delete External Resource keypairs
1.4.4
    - Improve Test Coverage
    - Improve function naming
    - Support tagging of all types (where available via API)
    - Support EC2 elastic network interfaces
    - Support Block Device Mapping in EC2 Instances
    - Support Security Group rule overrides via args
    - Support resource state verification
    - Clearer log messages